--- a/style.css
+++ b/style.css
@@ -1,7 +1,36 @@
 *  {box-sizing: border-box;}
 
-.navbar-brand {font-size: 27.45px;
-              font-weight: 900;}
+@font-face {
+    font-family: 'Poppins';
+    src: url(Poppins-Regular.ttf);
+}
+
+.navbar-brand {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 27.451px;
+    line-height: 27px;
+    color: #000000;
+    margin-top: 10px;}
+
+.col-md-5     { padding: 110px;}
+
+.col-3  {padding: 32px;
+        padding-top: 0px;}
+
+.img1  {margin-top: 40px;
+     }
+
+.denmark {font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;  
+    letter-spacing: 2px; 
+    color: #1B1B1B;
+    margin-left: 0px;
+    }
 
 .name   {font-weight: 400;
     font-size: 18px;}
@@ -17,25 +46,38 @@ h1  {margin-left:  100px;
 p   {margin-left: 100px;}
 
 .ellipse {right: 0;
-        height: 707px;}
+    Width: 840px;
+    Height: 529px}
 
-.docs    {right:  80px; }
+.docs    {
+    width: 889.5px;
+    height: 462px;}
 
 .nav-text   {color: #000000; }
 
 .footer > a {color: black;
     font-weight: 700;
     font-size: 14px;
-    text-decoration: none;}
+    text-decoration: none;
+}
+
+.container-foot  {z-index: 1;}
+
+.footer  {z-index: 5}
 
 .brothers {justify-content: baseline;}
 
 span {font-size: 14px;}
 
-.p   {font-weight: 400;
-    font-size: 18px;
-    line-height: 28px;
-    color: #9B9B9B;}
+.p   {font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #1B1B1B;
+    mix-blend-mode: normal;
+    opacity: 0.8;
+    margin-left: 0px;}
 
 .download   { border: 2px solid #5736B8;
     width: 273px;
@@ -43,8 +85,9 @@ span {font-size: 14px;}
     border-radius: 100px;
     margin: 0; 
     padding: 0;
-    background-color: white;
+    background-color: #FAD961;
     margin-top: 30px;
+    justify-content: center;
     }
 
 .line  { width: 1px;}
@@ -58,26 +101,37 @@ span {font-size: 14px;}
     align-items: center;
     margin-inline: auto;
     flex-direction: column;
+    margin-top: 65px;
 }
 
 .dolar {
     margin-inline: auto;
-    } 
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 21px;
+    text-align: center;
+    letter-spacing: 2px;
+    color: #000000;
+        } 
 
 .mark-heading-linie {
     color: #5956E8;
 }
 
 .mark-heading-text {
-    font-family: 'Noto Sans';
+    font-family: 'Poppins';
     font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 156.5%;
-    color: #292930;
-    letter-spacing: 0.135em;
-    text-transform: uppercase;
-}
+    font-weight: 600;
+    font-size: 72px;
+    line-height: 84px;
+    text-align: center;
+    letter-spacing: -4px;
+    color: #1B1B1B;
+    width: 800px;
+    justify-content: center;
+    }
 
 .mark-heading-button {
     margin-top: 14px;
@@ -109,6 +163,8 @@ span {font-size: 14px;}
     font-size: 18px;
     line-height: 28px;
     color: #1B1B1B;}
+
+.icon-2   {margin-left: 32px;}
 
 
 .border-right  { border-right: 1px solid #5736B8;
